# universal-config-test

./: README.md  pyproject.toml
src/universal_config_test/: config-test.py
src/universal_config_test/config/: pipeline_config.py
src/universal_config_test/docker/: Dockerfile
src/universal_config_test/krausening/base/: properties.properties
